test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/o3/mutants/17/result.txt
./test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/o3/mutants/17/Solution.java:15: verify: The prover cannot establish an assertion (UndefinedTooLargeIndex) in method addToArrayForm
//@ requires((num[0] == 0) ==> (num.length == 1));
                 ^
error: An error while executing a proof script for addToArrayForm: (error "Solver has unexpectedly terminated")
1 error
1 verification failure
